# cachou

./: .gitignore  Cargo.toml  TODO.md  workspace.code-workspace
client-cli/: .gitignore  Cargo.toml
client-cli/src/: main.rs
client-common/: Cargo.toml
client-common/src/: hibp.rs  lib.rs  opaque.rs  rpc.rs  rpc_client.rs
client-common/src/core/: client.rs  mod.rs  private_data.rs
client-common/src/core/client/: auth.rs  mod.rs
client-common/src/crypto/: mod.rs
client-core/: Cargo.toml
client-core/src/: lib.rs
client-web/: .gitignore  Cargo.toml  index.html
client-web/src/: account_creation.rs  lib.rs
common/: .gitignore  Cargo.toml
common/src/: api.rs  consts.rs  crypto.rs  lib.rs  rpc.rs
common/src/api/: call.rs  error.rs  mod.rs  newtypes.rs  private_data.rs  rpc.rs  session_token.rs  token.rs
common/src/api/newtypes/: bytes.rs  mod.rs
common/src/crypto/: crypto_boxes.rs  mod.rs  opaque.rs  sealed.rs  totp.rs
server/: Cargo.toml  commands.sql  config.toml
server/src/: config.rs  lib.rs  main.rs  opaque.rs  request_dispatcher.rs  rpc.rs  state.rs  tide.rs  totp.rs
server/src/core/: auth.rs  mod.rs  session.rs  session_token.rs
server/src/db/: mod.rs  sql.rs
server/src/http_server/: mod.rs  tide.rs  warp.rs
web/: Cargo.toml  index.html
web/src/: account_creation.rs  lib.rs
