[workspace]

members = [
  "common",
  "server",
  "client-common",
  "client-cli",
]

[patch.crates-io]


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 3
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
