[package]
name = "client-cli"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[dependencies]
client-common = {path = "../client-common"}
tracing = "0.1"
tracing-subscriber = "0.2"
rustyline = "7.0"
tokio-compat-02 = "0.1" # could also use async-compat
futures = "0.3"