[package]
name = "client-cli"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "../common"}
client-common = {path = "../client-common"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ]}
rustyline = "15"
tokio = "1"
eyre = "0.6"
color-eyre = "0.6"