[package]
name = "client-common"
version = "0.1.0"
authors = ["paulg"]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["client"] }
tracing = "0.1"
reqwest = "0.11"
rand = "0.8"
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"] }
eyre = "0.6"
derivative = "2"
sha2 = "0.9" # used to derive the secret_id from the masterkey
sha-1 = "0.9" # for HIBP api
data-encoding = "2"
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "0.15"
bs58 = "0.4"

# password and email check
zxcvbn = "2"
validator = { version = "0.12", default-features = false }

opaque-ke = { git = "https://github.com/novifinancial/opaque-ke.git"}
ed25519-dalek = { git = "https://github.com/PaulGrandperrin/ed25519-dalek.git" }
