[package]
name = "client-common"
version = "0.1.0"
authors = ["paulg"]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["client"] }
tracing = "0.1"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = "0.8"
rand_core = "0.6"
getrandom = "0.3"
eyre = "0.6"
derivative = "2"
sha2 = "0.10" # used to derive the secret_id from the masterkey
sha-1 = "0.10" # for HIBP api
data-encoding = "2"
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "1"
bs58 = "0.5"

# password and email check
zxcvbn = "3"
validator = { version = "0.20", default-features = false }

opaque-ke = { version = "3", features = [ "argon2" ]}
ed25519-dalek = { version = "2", features = [ "rand_core" ]}
argon2 = "0.5"