[package]
name = "client-core"
version = "0.1.0"
authors = ["paulg"]
edition = "2018"

[dependencies]
log = "0.4"
reqwest = "0.10"
#rand = "0.7"
rand = { git = "https://github.com/rust-random/rand.git" } # waiting for version 0.7.4
getrandom = { version = "0.2", features = ["js"] }

zxcvbn = {git = "https://github.com/1Password/zxcvbn-rs.git", branch = "master"} # includes a patch to work in wasm
validator = { version = "0.12", default-features = false }
rust-argon2 = "0.8"
pwned = "0.3"
thiserror = "1.0"
