[package]
name = "client-core"
version = "0.1.0"
authors = ["paulg"]
edition = "2018"

[dependencies]
tracing = "0.1" # maybe use tracing sometimes
reqwest = "0.10"
#rand = "0.7"
rand = { git = "https://github.com/rust-random/rand.git" } # waiting for version 0.7.4
getrandom = { version = "0.2", features = ["js"] }

validator = { version = "0.12", default-features = false }

# Key Derivation
blake2b_simd = "0.5"
rust-argon2 = "0.8"

# Password check
zxcvbn = {git = "https://github.com/1Password/zxcvbn-rs.git", branch = "master"} # includes a patch to work in wasm
pwned = "0.3"

thiserror = "1.0"
