[package]
name = "client-web"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[features]
default = ["console_log"]

[dependencies]
#wee_alloc = "0.4"
log = "0.4"
anyhow = "1.0"
#wasm-bindgen = "0.2"
#wasm-bindgen-futures = "0.4"
#js-sys = "0.3"
cfg-if = "1.0"
console_log = { version = "0.2", optional = true }
yew = "0.17"
yewtil = "0.3"
yew-router = "0.14"

client-core = {path = "../client-core/"}

#static_assertions

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 3 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true