[package]
name = "client-web"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[features]
default = ["logging"]
logging = ["tracing-wasm"]

[dependencies]
#wee_alloc = "0.4"
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }
eyre = "0.6"
#wasm-bindgen = "0.2"
#wasm-bindgen-futures = "0.4"
#js-sys = "0.3"
cfg-if = "1.0"
#console_log = { version = "0.2", optional = true }
yew = "0.17"
yewtil = "0.3"
yew-router = "0.14"

client-common = {path = "../client-common"}

#static_assertions

