[package]
name = "common"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "0.15"
hex-literal = "0.3"
derive_more = "0.99"
derivative = "2"
rand = "0.8"
rand_core = "0.6"
eyre = "0.6"
generic-array = "0.14"
thiserror = "1"

# logging / tracing
tracing = "0.1"
tracing-subscriber = "0.2"

# crypto
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke.git"}
#curve25519-dalek-ng = "4"
curve25519-dalek = "3"
xchacha8blake3siv = { git = "https://github.com/PaulGrandperrin/XChacha8Blake3Siv.git" }
ed25519-dalek = { git = "https://github.com/PaulGrandperrin/ed25519-dalek.git" }
sha2 = "0.9"
aead = "0.3"
digest = "0.9"

# key derivation
#blake2b_simd = "0.5"
rust-argon2 = "0.8"

[features]
client = []
server = []