[package]
name = "server"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/", features = ["server"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ]}
#tracing-futures = "0.2"

rmp-serde = "1"
rand = "0.8"
rand_core = "0.6"
eyre = "0.6"
color-eyre = "0.6"

#chrono = "0.4"
structopt = "0.3"
generic-bytes = "0.2"
generic-array = "1"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
#sha2 = "0.9"
futures-util = "0.3"
toml = "0.8"
bs58 = "0.5"
chrono = "0.4"
async-trait = "0.1"

opaque-ke = { version = "3", features = [ "argon2" ]}

sqlx = { version = "0.8", default-features = false, features = [ "mysql", "runtime-tokio-rustls" ] }

tokio = { version = "1", default-features = false, features = ["rt-multi-thread"]}
warp = { version = "0.3"}
