[package]
name = "web"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
yewtil = "0.3"
zxcvbn = {git = "https://github.com/1Password/zxcvbn-rs.git", branch = "master"} # includes a patch to work in wasm
validator = { version = "0.11", default-features = false }
pbkdf2 = { version = "0.6", default-features = false }
hmac = "0.10"
sha2 = "0.9"
pwned = "0.3"
client-core = {path = "../client-core/"}
wee_alloc = "0.4"

#[dependencies.web-sys]
#version = "0.3"
#features = [
#  'Headers',
#  'Request',
#  'RequestInit',
#  'RequestMode',
#  'Response',
#  'Window',
#]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true